--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ application {
 }
 
 group = 'ru.mephi.bot'
-version = '2.0.3'
+version = '3.0.5'
 sourceCompatibility = '1.8'
 
 
@@ -21,7 +21,10 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
-
+tasks.withType(Test) {
+	scanForTestClasses = false
+	include "**/*Test.class" // whatever Ant pattern matches your test class files
+}
 
 repositories {
 	mavenCentral()
